--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-27 [联邦调查局证实特朗普在袭击事件中遭子弹击中](/articles/voa/1013771.md)
+
+7-27 [耶伦：新兴市场担忧中国工业产能过剩](/articles/voa/1013772.md)
+
 7-27 [鼓励老兵“二次入伍”，中共打的什么算盘？](/articles/voa/1013773.md)
 
 7-27 [报道称美军曾在菲律宾传播贬损中国疫苗信息，五角大楼回应：中国疫情期散布虚假信息，美军用各平台对抗恶意影响力](/articles/voa/1013774.md)
@@ -596,8 +600,4 @@
 7-16 [国土安全部长：特朗普集会现场安保是一次“失败”](/articles/voa/1014069.md)
 
 7-16 [也门胡塞反叛武装涉嫌两次攻击红海船只](/articles/voa/1014070.md)
-
-7-16 [特朗普的副手万斯或有助于他吸引“铁锈带”选民](/articles/voa/1014071.md)
-
-7-16 [台湾跨党派代表团参加RNC：力挺美国民主并聚焦美台关系](/articles/voa/1014072.md)
 
