--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 7-27 [每日一语 2024.7.26](/articles/cdt/338537.md)
 
+7-27 [【翻车现场】“不开评论没人信，开了评论就翻车“：三中全会后政府部门新闻发布会遭遇集体翻车](/articles/cdt/338538.md)
+
 7-27 [亮见｜堂堂乡党委书记，居然都需要网络举报了](/articles/cdt/338540.md)
 
 7-27 [【404文库】雷叔写故事｜体育生搅浑了投行](/articles/cdt/338542.md)
@@ -598,6 +600,4 @@
 6-18 [【CDT图集】全球9城中国女权行动者举起巨型横幅 ：释放黄雪琴王建兵](/articles/cdt/339546.md)
 
 6-18 [【404文库】星辰大海的边界｜补税风波](/articles/cdt/339549.md)
-
-6-18 [每日一语 2024.6.17](/articles/cdt/339552.md)
 
