--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-28 [Lola｜这世界有太多过去，未来却不断缩水](/articles/cdt/338497.md)
+
 7-28 [唐一水｜怎么，巴黎开幕吓到你了？](/articles/cdt/338499.md)
 
 7-27 [果壳｜巴黎奥运会开幕式的28个看点：有种不顾观众死活的美](/articles/cdt/338505.md)
@@ -598,6 +600,4 @@
 6-19 [每日一语 2024.6.18](/articles/cdt/339503.md)
 
 6-18 [网易新闻｜烟草局伪造证据被监控拍下，甘肃农民领刑五年](/articles/cdt/339505.md)
-
-6-18 [姜汁满头｜制造网红，给年轻人希望](/articles/cdt/339507.md)
 
