--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-28 [以色列说，真主党火箭在一个足球场打死11人，誓言回应](/articles/voa/1013757.md)
+
 7-28 [法国10列高速火车中的七列在遭受破坏后将在星期六运行](/articles/voa/1013758.md)
 
 7-28 [共产党越管越严 致富之路越走越窄 中国人把矛头对准制度不公和习近平恶政](/articles/voa/1013759.md)
@@ -598,6 +600,4 @@
 7-16 [英国将强化武装力量，应对中俄伊朝“致命四重奏”威胁](/articles/voa/1014055.md)
 
 7-16 [菲律宾和中国同意设立两国元首热线，防止冲突失控](/articles/voa/1014056.md)
-
-7-16 [中国斡旋哈马斯和法塔赫谈判 促使双方实现和解团结](/articles/voa/1014057.md)
 
