--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-28 [为避免中国或他国主导加密货币市场 特朗普誓言建立“国家比特币储备”](/articles/voa/1013754.md)
+
+7-28 [布林肯抵达日本 将举行美日2+2会谈、四方安全会谈](/articles/voa/1013755.md)
+
 7-28 [俄罗斯夺取乌克兰东部的洛祖瓦茨克定居点](/articles/voa/1013756.md)
 
 7-28 [以色列说，真主党火箭在一个足球场打死11人，誓言回应](/articles/voa/1013757.md)
@@ -596,8 +600,4 @@
 7-17 [拜登选情遭遇严重挫折，规模庞大的汽车司机工会可能拒绝为他背书](/articles/voa/1014052.md)
 
 7-17 [大国贸易战此起彼伏，台湾企业加速将供应链从中国迁往印度](/articles/voa/1014053.md)
-
-7-16 [万斯首次接受媒体采访，强调中国是美国“最大威胁”](/articles/voa/1014054.md)
-
-7-16 [英国将强化武装力量，应对中俄伊朝“致命四重奏”威胁](/articles/voa/1014055.md)
 
