--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-28 [德语媒体：习近平变成中东总教父？](/articles/dw/1024758.md)
+
 7-28 [戈兰高地以色列占领区遭火箭弹袭击 以誓言让真主党付出沉重代价](/articles/dw/1024759.md)
 
 7-28 [神秘骨骸或能证明日本战争罪行](/articles/dw/1024760.md)
@@ -598,6 +600,4 @@
 6-29 [伊朗总统选举:改革派与强硬派候选人进入“决赛圈”](/articles/dw/1025056.md)
 
 6-29 [阿桑奇，重获自由](/articles/dw/1025057.md)
-
-6-29 [意大利强化与日本军事合作 派遣航母将参加联合军演](/articles/dw/1025058.md)
 
