--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-28 [以色列称真主党的袭击“越过红线” 伊朗则警告以色列对黎巴嫩的攻击](/articles/voa/1013750.md)
+
+7-28 [台海两岸7月30日重启“0214金门事件”协商 当日有望送回遗体和船只](/articles/voa/1013751.md)
+
 7-28 [朝鲜战争停战周年纪念日 朝鲜誓言一旦开战将压倒性“彻底歼灭”敌人](/articles/voa/1013752.md)
 
 7-28 [俄罗斯军舰数周内再次“例行访问”古巴](/articles/voa/1013753.md)
@@ -596,8 +600,4 @@
 7-17 [英中关系大转折: 中国在英国新的防务审查中被标为“致命”威胁](/articles/voa/1014048.md)
 
 7-17 [朝鲜强迫劳动可能构成反人类罪行](/articles/voa/1014049.md)
-
-7-17 [美国和拉美国家举办峰会应对经济问题](/articles/voa/1014050.md)
-
-7-17 [中国网络观察: 官民争议“历史的垃圾时间”](/articles/voa/1014051.md)
 
