--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-28 [原声带·严歌苓：出走半生，我的觉醒与幻灭](/articles/voa/1013747.md)
+
+7-28 [菲律宾指责中国“曲解”双方有关南中国海补给任务临时协议](/articles/voa/1013748.md)
+
 7-28 [马云和肖建华·中共权贵和钱权交易](/articles/voa/1013749.md)
 
 7-28 [以色列称真主党的袭击“越过红线” 伊朗则警告以色列对黎巴嫩的攻击](/articles/voa/1013750.md)
@@ -596,8 +600,4 @@
 7-17 [以色列空袭在加沙南部和中部打死大约60人](/articles/voa/1014045.md)
 
 7-17 [流亡的中国商人郭文贵在联邦欺诈案中被判有罪](/articles/voa/1014046.md)
-
-7-17 [美国联邦参议员梅嫩德斯被判所有指控成立，包括接受现金、黄金和汽车等贿赂](/articles/voa/1014047.md)
-
-7-17 [英中关系大转折: 中国在英国新的防务审查中被标为“致命”威胁](/articles/voa/1014048.md)
 
