--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-29 [【网络民议】“央视解说沉默了，直播这事不适合央视，不能完全把控局面”](/articles/cdt/338489.md)
+
 7-28 [Lola｜这世界有太多过去，未来却不断缩水](/articles/cdt/338497.md)
 
 7-28 [唐一水｜怎么，巴黎开幕吓到你了？](/articles/cdt/338499.md)
@@ -598,6 +600,4 @@
 6-19 [再昧拾金｜乌利茨卡娅：流亡，禁书，权力的手](/articles/cdt/339493.md)
 
 6-19 [大猫财经Pro｜一查就停产，很多大老板开始失眠了……](/articles/cdt/339496.md)
-
-6-19 [城市的地得｜残酷的闲暇：女工、冷藏车与和河南乡村图景](/articles/cdt/339498.md)
 
