--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-7 [中国7月份出口增速放缓至三个月低点 进口恢复增长](/articles/voa/1013518.md)
+
 8-7 [波音将改进737 Max 9设计以防止舱门空中脱落](/articles/voa/1013519.md)
 
 8-7 [部署更多美军之际美国安领导层呼吁中东保持冷静](/articles/voa/1013520.md)
@@ -598,6 +600,4 @@
 7-26 [中国寻求外交斡旋扩大影响力 分析：目前只具象征意义](/articles/voa/1013816.md)
 
 7-25 [美中关系持续紧张导致部分美国州政府从中国公司撤资](/articles/voa/1013817.md)
-
-7-25 [手机市场竞争激烈 “苹果”在华销售下滑 跌出前五](/articles/voa/1013818.md)
 
