--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-7 [日本滑板称霸巴黎奥运 在本土为何受冷眼？](/articles/dw/1024668.md)
+
 8-7 [賀錦麗搭檔沃爾茲對華立場軟還是硬?](/articles/dw/1024669.md)
 
 8-6 [客座评论：赖清德需要Plan B](/articles/dw/1024670.md)
@@ -598,6 +600,4 @@
 7-7 [法国议会决选 未来引人担忧](/articles/dw/1024966.md)
 
 7-7 [前ASML首席执行官：美中芯片争端可能持续数十年](/articles/dw/1024967.md)
-
-7-7 [中国士兵抵达白俄罗斯参加反恐演习](/articles/dw/1024968.md)
 
