--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-7 [解放军在“黄岩岛”附近举行海空战巡 菲美加澳同日联合军演](/articles/voa/1013516.md)
+
+8-7 [美国将增加在澳大利亚的军力投射能力以应对中国的“胁迫”行为](/articles/voa/1013517.md)
+
 8-7 [中国7月份出口增速放缓至三个月低点 进口恢复增长](/articles/voa/1013518.md)
 
 8-7 [波音将改进737 Max 9设计以防止舱门空中脱落](/articles/voa/1013519.md)
@@ -596,8 +600,4 @@
 7-26 [三罪表证成立11月再讯 黎智英将出庭自辩](/articles/voa/1013814.md)
 
 7-26 [拜登力挺哈里斯，中国舆论热议 分析:谁胜选都会继续抗中](/articles/voa/1013815.md)
-
-7-26 [中国寻求外交斡旋扩大影响力 分析：目前只具象征意义](/articles/voa/1013816.md)
-
-7-25 [美中关系持续紧张导致部分美国州政府从中国公司撤资](/articles/voa/1013817.md)
 
