--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-7 [藏人、六四人士: 乐见沃尔兹对中国有第一手经验](/articles/voa/1013510.md)
+
+8-7 [哈马斯选择强硬派辛瓦尔继任领袖，以色列称其必死无疑](/articles/voa/1013511.md)
+
+8-7 [民调：哈里斯比拜登更受非裔欢迎，白人对特朗普支持度略升](/articles/voa/1013512.md)
+
 8-7 [球迷微博上怒怼奥运金牌球员遭刑拘，北京利用奥运整治“饭圈文化”](/articles/voa/1013513.md)
 
 8-7 [乌军越境攻击俄库尔斯克地区，双方展开激战](/articles/voa/1013514.md)
@@ -594,10 +600,4 @@
 7-26 [美防长对阿拉斯加海岸附近的俄中联合空中行动泰然处之](/articles/voa/1013808.md)
 
 7-26 [一名朝鲜男子因涉嫌对美国医院进行勒索软件攻击而被起诉](/articles/voa/1013809.md)
-
-7-26 [中国经济下滑司法扭曲令外资律师行陆续撤出](/articles/voa/1013810.md)
-
-7-26 [西方制裁导致中俄贸易结算困难，迫使两国转用数字贸易平台](/articles/voa/1013811.md)
-
-7-26 [中国政府刺激经济新举措 发3000亿国债支持消费品以旧换新](/articles/voa/1013812.md)
 
