--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-8 [“新质生产力”成中国经济遮羞布 低技术产业崩溃令工人叫苦连天](/articles/voa/1013507.md)
+
+8-8 [路透独家揭秘：孟加拉国军方拒绝镇压示威者，迫使总理仓皇出逃](/articles/voa/1013508.md)
+
 8-8 [菲律宾称中国海军舰只“尾随”菲美加澳四国海空演习，并无“联合战巡”](/articles/voa/1013509.md)
 
 8-7 [藏人、六四人士: 乐见沃尔兹对中国有第一手经验](/articles/voa/1013510.md)
@@ -596,8 +600,4 @@
 7-26 [美国防部长：中俄军机从任何方向接近美领空都将被拦截](/articles/voa/1013805.md)
 
 7-26 [反击中国影响力：鲁比奥参议员推出《美印防务合作法》](/articles/voa/1013806.md)
-
-7-26 [切断一带一路后首次出访北京，梅洛尼带着航母还是收款机?](/articles/voa/1013807.md)
-
-7-26 [美防长对阿拉斯加海岸附近的俄中联合空中行动泰然处之](/articles/voa/1013808.md)
 
