--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-8 [iPhone为何中国制造？](/articles/nyt/1042499.md)
+
 8-7 [哈马斯新任政治“头号人物”是谁？](/articles/nyt/1042500.md)
 
 8-7 [关于贺锦丽搭档沃尔兹的19个事实：1989年曾在中国教书](/articles/nyt/1042501.md)
@@ -598,6 +600,4 @@
 5-7 [云南一家医院发生持刀袭击事件，致至少两死21伤](/articles/nyt/1042797.md)
 
 5-7 [《纽约时报》获国际报道奖等三项普利策奖](/articles/nyt/1042798.md)
-
-5-7 [习近平强硬回应批评，称反对利用乌克兰危机煽动新冷战](/articles/nyt/1042799.md)
 
