--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-8 [世卫组织：将向加沙运送100万支脊髓灰质炎疫苗](/articles/voa/1013501.md)
+
+8-8 [国事光析：“中国式现代化”的障眼法](/articles/voa/1013502.md)
+
+8-8 [英国骚乱: 在英港人组织担忧针对讯息 多地出现反对“反移民”示威](/articles/voa/1013503.md)
+
 8-8 [美共和党议员致函司法部 要求调查高等院校与中国有关的资金细节](/articles/voa/1013504.md)
 
 8-8 [美军报告称中俄对美国本土的军事威胁日趋严重](/articles/voa/1013505.md)
@@ -594,10 +600,4 @@
 7-26 [中国罕见地赞扬菲律宾总统禁止中国在线赌博运营商](/articles/voa/1013799.md)
 
 7-26 [中国“走线客”冲击洛杉矶华人就业市场](/articles/voa/1013800.md)
-
-7-26 [华盛顿警告对手：美国政治变动不是软弱的表现](/articles/voa/1013801.md)
-
-7-26 [美中台争相发展军用无人机技术领域](/articles/voa/1013802.md)
-
-7-26 [拜登和内塔尼亚胡在白宫会晤并讨论加沙战争与停火谈判](/articles/voa/1013803.md)
 
