--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-8 [欧盟监测机构：2024年越来越可能成为有记录以来最热年份](/articles/voa/1013498.md)
+
 8-8 [中国福耀玻璃厂在美涉嫌金融犯罪和劳工剥削遭调查](/articles/voa/1013499.md)
 
 8-8 [蒂姆·沃尔兹成为民主党副总统候选人后他与中国的关系备受关注](/articles/voa/1013500.md)
@@ -598,6 +600,4 @@
 7-26 [斯里兰卡将举行自局势动荡以来的首次总统选举](/articles/voa/1013796.md)
 
 7-26 [哈里斯敦促内塔尼亚胡结束加沙战争](/articles/voa/1013797.md)
-
-7-26 [墨西哥大毒枭在美国得克萨斯州被捕](/articles/voa/1013798.md)
 
