--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-8 [衣者朝新｜劳东燕：法律与新闻不可能长期处于低谷](/articles/cdt/338191.md)
+
 8-8 [每日一语 2024.8.6](/articles/cdt/338197.md)
 
 8-8 [老牌恶棍｜如何看待网络举报？我的建议是直接申遗](/articles/cdt/338199.md)
@@ -598,6 +600,4 @@
 6-29 [【404文库】i看见｜日本人学校，间谍学校？](/articles/cdt/339271.md)
 
 6-30 [【CDT周报】第176期：一个大写的人，一道照亮世人心灵的光](/articles/cdt/339279.md)
-
-6-30 [【CDT月度视频】六月之声(2024)——向《四月之声》致敬](/articles/cdt/339283.md)
 
