--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-8 [数周动乱后孟加拉国将迎来临时政府的成立](/articles/voa/1013496.md)
+
 8-8 [美国总统选战在中西部地区打响](/articles/voa/1013497.md)
 
 8-8 [欧盟监测机构：2024年越来越可能成为有记录以来最热年份](/articles/voa/1013498.md)
@@ -598,6 +600,4 @@
 7-26 [奥巴马夫妇支持哈里斯代表民主党参加2024美国总统大选](/articles/voa/1013794.md)
 
 7-26 [韩国央行估计朝鲜经济在经历多年萎缩后于2023年实现增长](/articles/voa/1013795.md)
-
-7-26 [斯里兰卡将举行自局势动荡以来的首次总统选举](/articles/voa/1013796.md)
 
