--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-8 [喜忧参半：德国出口大幅下滑 工厂产出上升](/articles/dw/1024654.md)
+
 8-8 [拜登对若特朗普败选和平权力交接“毫无信心”](/articles/dw/1024655.md)
 
 8-8 [俄罗斯：库尔斯克受到攻击 当地进入紧急状态](/articles/dw/1024656.md)
@@ -598,6 +600,4 @@
 7-8 [匈牙利总理欧尔班为何突然访华？](/articles/dw/1024952.md)
 
 7-8 [土耳其球员比“灰狼手势”后被欧足联禁赛两场](/articles/dw/1024953.md)
-
-7-8 [马克龙拒绝总理辞职](/articles/dw/1024954.md)
 
