--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-9 [美国教师在吉林遇袭：美方对中国处理方式表达不满](/articles/nyt/1042494.md)
+
 8-8 [蒂姆·沃尔兹非凡的平凡人生](/articles/nyt/1042495.md)
 
 8-8 [布林肯再访亚洲强化盟友关系，强调美国承诺](/articles/nyt/1042496.md)
@@ -598,6 +600,4 @@
 5-8 [特朗普性丑闻、拜登的严肃演讲和一场前所未有的大选](/articles/nyt/1042792.md)
 
 5-8 [美国大学校园抗议成为中俄等国的宣传“武器”](/articles/nyt/1042793.md)
-
-5-8 [吃火腿、送球衣：马克龙的魅力攻势能打动习近平吗](/articles/nyt/1042794.md)
 
