--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-9 [特朗普和哈里斯将在美国广播公司举行首次总统辩论](/articles/voa/1013472.md)
+
 8-9 [专家：随着缅甸军政府控制力减弱，中国对其影响力不断增强](/articles/voa/1013473.md)
 
 8-9 [预算吃紧的中国政府向企业和个人追缴欠税](/articles/voa/1013474.md)
@@ -598,6 +600,4 @@
 7-27 [韩国队在开幕式被介绍成“朝鲜队” 国际奥委会道歉](/articles/voa/1013770.md)
 
 7-27 [联邦调查局证实特朗普在袭击事件中遭子弹击中](/articles/voa/1013771.md)
-
-7-27 [耶伦：新兴市场担忧中国工业产能过剩](/articles/voa/1013772.md)
 
