--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-9 [普京执掌俄罗斯的四分之一个世纪](/articles/dw/1024649.md)
+
 8-9 [客座评论：中国官场的“两面人”与“恨国党”](/articles/dw/1024650.md)
 
 8-9 [哈西娜：孟加拉国曾经的民主象征](/articles/dw/1024651.md)
@@ -598,6 +600,4 @@
 7-9 [欧美驻华大使：同中国民间交流为什么这么难？](/articles/dw/1024947.md)
 
 7-9 [北约峰会彰显实力　欧美政局均有挑战](/articles/dw/1024948.md)
-
-7-9 [一举多得！比亚迪在土耳其设厂](/articles/dw/1024949.md)
 
