--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-10 [美跨党派议员推出议案 谴责北京在南中国海军事挑衅行为](/articles/voa/1013457.md)
+
 8-10 [以色列发动汗尤尼斯攻势，同意恢复加沙停火谈判](/articles/voa/1013458.md)
 
 8-10 [俄宣布库尔斯克州进入紧急状态，俄导弹击中乌东购物中心打死12人](/articles/voa/1013459.md)
@@ -598,6 +600,4 @@
 7-28 [布林肯抵达日本 将举行美日2+2会谈、四方安全会谈](/articles/voa/1013755.md)
 
 7-28 [俄罗斯夺取乌克兰东部的洛祖瓦茨克定居点](/articles/voa/1013756.md)
-
-7-28 [以色列说，真主党火箭在一个足球场打死11人，誓言回应](/articles/voa/1013757.md)
 
