--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-10 [情报界消息人士：伊朗将很快向俄罗斯运送数百枚弹道导弹](/articles/voa/1013449.md)
+
+8-10 [随着美国大选临近 美韩日安全合作可能面临考验](/articles/voa/1013450.md)
+
+8-10 [以色列财长反对加沙会谈，白宫抨击其误导公众](/articles/voa/1013451.md)
+
 8-10 [分析：中国航空公司海外扩展之际，外国航空公司对中国失去兴趣](/articles/voa/1013452.md)
 
 8-10 [地区参与者支持争取加沙停火的斡旋努力](/articles/voa/1013453.md)
@@ -594,10 +600,4 @@
 7-28 [原声带·严歌苓：出走半生，我的觉醒与幻灭](/articles/voa/1013747.md)
 
 7-28 [菲律宾指责中国“曲解”双方有关南中国海补给任务临时协议](/articles/voa/1013748.md)
-
-7-28 [马云和肖建华·中共权贵和钱权交易](/articles/voa/1013749.md)
-
-7-28 [以色列称真主党的袭击“越过红线” 伊朗则警告以色列对黎巴嫩的攻击](/articles/voa/1013750.md)
-
-7-28 [台海两岸7月30日重启“0214金门事件”协商 当日有望送回遗体和船只](/articles/voa/1013751.md)
 
