--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-10 [美智库访台桌面推演：习近平准备承受经济与地缘政治冲击以求统一台湾](/articles/voa/1013448.md)
+
 8-10 [情报界消息人士：伊朗将很快向俄罗斯运送数百枚弹道导弹](/articles/voa/1013449.md)
 
 8-10 [随着美国大选临近 美韩日安全合作可能面临考验](/articles/voa/1013450.md)
@@ -598,6 +600,4 @@
 7-28 [普京警告美国若在德国部署远程导弹或引发冷战时期的导弹危机](/articles/voa/1013746.md)
 
 7-28 [原声带·严歌苓：出走半生，我的觉醒与幻灭](/articles/voa/1013747.md)
-
-7-28 [菲律宾指责中国“曲解”双方有关南中国海补给任务临时协议](/articles/voa/1013748.md)
 
