--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-10 [每日一语 2024.8.9](/articles/cdt/338121.md)
+
 8-9 [【敏感词库】倒卖尸体、遗体倒卖、尸体贩卖](/articles/cdt/338151.md)
 
 8-9 [【404文库】财新｜遗体黑市背后：同种异体骨如何用于临床？如何获取？](/articles/cdt/338153.md)
@@ -598,6 +600,4 @@
 7-2 [七叶星｜美军偷小麦——咱能别这么弱智吗？](/articles/cdt/339198.md)
 
 7-2 [每日一语 2024.7.1](/articles/cdt/339204.md)
-
-7-2 [南都周刊｜火箭坠落背后的民营航天企业](/articles/cdt/339206.md)
 
