--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-10 [常识流通处｜“早知如此，何必当初！”发出这种感慨的，不只是跑路的孟国总理](/articles/cdt/338116.md)
+
+8-10 [法规指南｜中级人民法院 副院长网上喊冤](/articles/cdt/338117.md)
+
+8-10 [【404文库】嘉陵桥渡｜盗卖数千具逝者遗体，如此大案为何多年来未暴露？](/articles/cdt/338119.md)
+
 8-10 [每日一语 2024.8.9](/articles/cdt/338121.md)
 
 8-9 [【敏感词库】倒卖尸体、遗体倒卖、尸体贩卖](/articles/cdt/338151.md)
@@ -594,10 +600,4 @@
 7-2 [蕨经｜官宣前后的社交平台与胡友平](/articles/cdt/339188.md)
 
 7-2 [竹不倒｜看你需要，他们的立场可以随时改变，这就是无底线！](/articles/cdt/339190.md)
-
-7-2 [南方周末｜“校车阿姨”胡友平](/articles/cdt/339193.md)
-
-7-2 [七叶星｜美军偷小麦——咱能别这么弱智吗？](/articles/cdt/339198.md)
-
-7-2 [每日一语 2024.7.1](/articles/cdt/339204.md)
 
