--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-10 [以色列空袭加沙一学校 哈马斯称逾百人丧生](/articles/dw/1024638.md)
+
 8-10 [阿尔及利亚拳击手奥运摘金 再次回应性别争议](/articles/dw/1024639.md)
 
 8-10 [肖尔茨：巴黎激励德国申办奥运会](/articles/dw/1024640.md)
@@ -598,6 +600,4 @@
 7-11 [赛前禁欲？床上运动有助运动员临场发挥](/articles/dw/1024936.md)
 
 7-10 [中国泳队涉禁药事件调查：结果公布仍被质疑](/articles/dw/1024937.md)
-
-7-10 [佩泽希齐扬 - 没有实权的伊朗新总统](/articles/dw/1024938.md)
 
