--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-10 [朝鲜将逾万名灾民迁往首都安置](/articles/dw/1024636.md)
+
+8-10 [印尼：对“中国制造”说不](/articles/dw/1024637.md)
+
 8-10 [以色列空袭加沙一学校 哈马斯称逾百人丧生](/articles/dw/1024638.md)
 
 8-10 [阿尔及利亚拳击手奥运摘金 再次回应性别争议](/articles/dw/1024639.md)
@@ -596,8 +600,4 @@
 7-11 [客座評論：立法能解決博愛座引起的世代對立嗎？](/articles/dw/1024934.md)
 
 7-11 [北約首稱中國為「關鍵縱容者」 中方提嚴正交涉](/articles/dw/1024935.md)
-
-7-11 [赛前禁欲？床上运动有助运动员临场发挥](/articles/dw/1024936.md)
-
-7-10 [中国泳队涉禁药事件调查：结果公布仍被质疑](/articles/dw/1024937.md)
 
