--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-10 [俄罗斯：库尔斯克核电站发现弹片 多地启动反恐行动](/articles/dw/1024635.md)
+
 8-10 [朝鲜将逾万名灾民迁往首都安置](/articles/dw/1024636.md)
 
 8-10 [印尼：对“中国制造”说不](/articles/dw/1024637.md)
@@ -598,6 +600,4 @@
 7-11 [客座评论：拒绝极端，营造未来——评法国大选](/articles/dw/1024933.md)
 
 7-11 [客座評論：立法能解決博愛座引起的世代對立嗎？](/articles/dw/1024934.md)
-
-7-11 [北約首稱中國為「關鍵縱容者」 中方提嚴正交涉](/articles/dw/1024935.md)
 
