--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-10 [专访阿古智子： 从爱中国到不敢去中国的日本学者](/articles/voa/1013440.md)
+
 8-10 [乌军突击部队在俄本土扩大战果，莫斯科下令边境三州实施安全管制](/articles/voa/1013441.md)
 
 8-10 [在马尔代夫驱逐印度军队后 两国寻求重建关系](/articles/voa/1013442.md)
@@ -598,6 +600,4 @@
 7-29 [梅洛尼访华签署三年行动计划 承诺“重启”与中国的合作](/articles/voa/1013738.md)
 
 7-29 [埃尔多安：土耳其可能进入以色列帮助巴勒斯坦人](/articles/voa/1013739.md)
-
-7-29 [巴基斯坦与中国进行债务重组谈判](/articles/voa/1013740.md)
 
