--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-11 [菲律宾罕见谴责中国空军战机“危险”操作，中方自辩“专业规范”](/articles/voa/1013438.md)
+
 8-10 [海外台湾人团体联名致函国际奥委会，允许台湾以本名参赛](/articles/voa/1013439.md)
 
 8-10 [专访阿古智子： 从爱中国到不敢去中国的日本学者](/articles/voa/1013440.md)
@@ -598,6 +600,4 @@
 7-29 [碧桂园清盘呈请聆讯再度延期至明年1月](/articles/voa/1013736.md)
 
 7-29 [委内瑞拉总统选举落幕 马杜罗和反对派各自宣布胜选](/articles/voa/1013737.md)
-
-7-29 [梅洛尼访华签署三年行动计划 承诺“重启”与中国的合作](/articles/voa/1013738.md)
 
