--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-11 [成千上万中国人移居日本 摆脱焦虑寻求安稳？](/articles/voa/1013436.md)
+
+8-11 [习近平力推“共同富裕”，金融业者感叹钱包被掏](/articles/voa/1013437.md)
+
 8-11 [菲律宾罕见谴责中国空军战机“危险”操作，中方自辩“专业规范”](/articles/voa/1013438.md)
 
 8-10 [海外台湾人团体联名致函国际奥委会，允许台湾以本名参赛](/articles/voa/1013439.md)
@@ -596,8 +600,4 @@
 7-29 [黎巴嫩严阵以待以色列报复之际 无人机攻击致黎巴嫩2死3伤](/articles/voa/1013734.md)
 
 7-29 [美日澳印外长谴责在南中国海的危险行动](/articles/voa/1013735.md)
-
-7-29 [碧桂园清盘呈请聆讯再度延期至明年1月](/articles/voa/1013736.md)
-
-7-29 [委内瑞拉总统选举落幕 马杜罗和反对派各自宣布胜选](/articles/voa/1013737.md)
 
