--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-11 [巴勒斯坦官员说，以色列空袭加沙一所学校打死至少80人](/articles/voa/1013434.md)
+
 8-11 [乌军进入俄罗斯边境地区让普京难堪 它会如何影响战争进程？](/articles/voa/1013435.md)
 
 8-11 [成千上万中国人移居日本 摆脱焦虑寻求安稳？](/articles/voa/1013436.md)
@@ -598,6 +600,4 @@
 7-29 [聿文视界：三中全会敲定2029年完成改革，暗示习近平必有第四任](/articles/voa/1013732.md)
 
 7-29 [法国内政部长：法国倾向于认为铁路破坏事件为极左翼极端分子所为](/articles/voa/1013733.md)
-
-7-29 [黎巴嫩严阵以待以色列报复之际 无人机攻击致黎巴嫩2死3伤](/articles/voa/1013734.md)
 
