--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-11 [台湾选手林郁婷撇性别争议 夺巴黎奥运拳击羽量级金牌](/articles/voa/1013431.md)
+
+8-11 [2024巴黎奥运会十大精彩时刻：争议、感动与惊喜交织的体坛盛宴](/articles/voa/1013432.md)
+
 8-11 [俄罗斯在乌克兰突击进入中撤离几万人](/articles/voa/1013433.md)
 
 8-11 [巴勒斯坦官员说，以色列空袭加沙一所学校打死至少80人](/articles/voa/1013434.md)
@@ -596,8 +600,4 @@
 7-29 [全球多国政府呼吁委内瑞拉大选计票要透明](/articles/voa/1013729.md)
 
 7-29 [香港民运人士邹家成和律师将投诉信带离监狱被判罪成](/articles/voa/1013730.md)
-
-7-29 [路透社：中国7月制造业活动连续第三个月萎缩](/articles/voa/1013731.md)
-
-7-29 [聿文视界：三中全会敲定2029年完成改革，暗示习近平必有第四任](/articles/voa/1013732.md)
 
