--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-11 [一些美国议员敦促对孟加拉国官员实施制裁](/articles/voa/1013430.md)
+
 8-11 [台湾选手林郁婷撇性别争议 夺巴黎奥运拳击羽量级金牌](/articles/voa/1013431.md)
 
 8-11 [2024巴黎奥运会十大精彩时刻：争议、感动与惊喜交织的体坛盛宴](/articles/voa/1013432.md)
@@ -598,6 +600,4 @@
 7-29 [日中外长会面，专家:中国一味要求日本单方面改变难有成果](/articles/voa/1013728.md)
 
 7-29 [全球多国政府呼吁委内瑞拉大选计票要透明](/articles/voa/1013729.md)
-
-7-29 [香港民运人士邹家成和律师将投诉信带离监狱被判罪成](/articles/voa/1013730.md)
 
