--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-11 [王左中右｜奥运会采访区挤满了孔乙己](/articles/cdt/338094.md)
+
 8-11 [剥洋葱people｜8年终消掉的“犯罪记录”](/articles/cdt/338096.md)
 
 8-11 [大爱清尘｜尘肺病侵入“90后”，被粉尘窒息的青春](/articles/cdt/338101.md)
@@ -598,6 +600,4 @@
 7-3 [维舟｜自我封闭才是真正的危机](/articles/cdt/339174.md)
 
 7-3 [每日一语 2024.7.2](/articles/cdt/339177.md)
-
-7-3 [澎湃新闻｜一个居委会起诉了县政府](/articles/cdt/339180.md)
 
