--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 8-11 [剥洋葱people｜8年终消掉的“犯罪记录”](/articles/cdt/338096.md)
 
+8-11 [【重温】Kita｜Uyghur Voices：我所推荐的三档维吾尔 Podcasts](/articles/cdt/338099.md)
+
 8-11 [大爱清尘｜尘肺病侵入“90后”，被粉尘窒息的青春](/articles/cdt/338101.md)
 
 8-11 [【404文库】基本常识｜文章被删了，但硬骨头还在](/articles/cdt/338103.md)
@@ -598,6 +600,4 @@
 7-3 [突围先生｜就业率崩的越来越离谱了](/articles/cdt/339171.md)
 
 7-3 [维舟｜自我封闭才是真正的危机](/articles/cdt/339174.md)
-
-7-3 [每日一语 2024.7.2](/articles/cdt/339177.md)
 
