--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-12 [张江名媛｜奥运记者的智商](/articles/cdt/338083.md)
+
+8-12 [旧闻评论｜网络举报换了人间？](/articles/cdt/338085.md)
+
 8-11 [王左中右｜奥运会采访区挤满了孔乙己](/articles/cdt/338094.md)
 
 8-11 [剥洋葱people｜8年终消掉的“犯罪记录”](/articles/cdt/338096.md)
@@ -12,6 +16,8 @@
 8-11 [大爱清尘｜尘肺病侵入“90后”，被粉尘窒息的青春](/articles/cdt/338101.md)
 
 8-11 [【404文库】基本常识｜文章被删了，但硬骨头还在](/articles/cdt/338103.md)
+
+8-12 [【CDT周报】第182期：生前当韭菜，死后成耗材](/articles/cdt/338104.md)
 
 8-10 [阿斗凿墙｜一枚：纽约中央公园的三个长椅](/articles/cdt/338107.md)
 
@@ -594,10 +600,4 @@
 7-4 [这是一个令人疑惑的星球｜河南农村旱灾情况考察报告](/articles/cdt/339164.md)
 
 7-3 [情况有点复杂｜我花了666块，测试了下广州地铁广告的审查尺度](/articles/cdt/339167.md)
-
-7-3 [冰川思享号｜营养餐这块“唐僧肉”，真在孩子们的餐桌上出现过吗](/articles/cdt/339169.md)
-
-7-3 [突围先生｜就业率崩的越来越离谱了](/articles/cdt/339171.md)
-
-7-3 [维舟｜自我封闭才是真正的危机](/articles/cdt/339174.md)
 
