--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-12 [【404文库】阿罗汉不约｜关于倒卖尸体，补充一些其他角度](/articles/cdt/338081.md)
+
 8-12 [张江名媛｜奥运记者的智商](/articles/cdt/338083.md)
 
 8-12 [旧闻评论｜网络举报换了人间？](/articles/cdt/338085.md)
@@ -598,6 +600,4 @@
 7-4 [每日一语 2024.7.3](/articles/cdt/339162.md)
 
 7-4 [这是一个令人疑惑的星球｜河南农村旱灾情况考察报告](/articles/cdt/339164.md)
-
-7-3 [情况有点复杂｜我花了666块，测试了下广州地铁广告的审查尺度](/articles/cdt/339167.md)
 
