--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-12 [印度的战略飞跃: 亮相轻型坦克“佐拉瓦”，部署中印边界](/articles/voa/1013421.md)
+
+8-12 [英国对来自中国的研究人员严加审查引发广泛质疑](/articles/voa/1013422.md)
+
 8-12 [以色列军方扩大加沙南部汗尤尼斯居民撤离令](/articles/voa/1013423.md)
 
 8-11 [王毅：中国支持伊朗捍卫主权安全和民族尊严](/articles/voa/1013424.md)
@@ -596,8 +600,4 @@
 7-30 [英最大中国研究所面临起诉: 拒绝透露与中国有关的资金用途](/articles/voa/1013719.md)
 
 7-30 [美国将向乌克兰提供17亿美元军事援助](/articles/voa/1013720.md)
-
-7-30 [韩国:朝鲜官员为金正恩的肥胖相关问题寻求新药](/articles/voa/1013721.md)
-
-7-30 [国会通过法案，要求联邦政府必须采购完全在美国制造的美国国旗](/articles/voa/1013722.md)
 
