--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-12 [以色列扩大加沙南部的撤离命令。哈马斯希望协议计划而不是更多谈判](/articles/voa/1013418.md)
+
 8-12 [巴黎为2024年奥运会举行一场群星秀](/articles/voa/1013419.md)
 
 8-12 [俄罗斯称阻止了乌克兰攻入库尔斯克地区](/articles/voa/1013420.md)
@@ -598,6 +600,4 @@
 7-30 [巴基斯坦军方：瓜达尔抗议者打死一名军人，打伤16名军人](/articles/voa/1013716.md)
 
 7-30 [拜登公布最高法院改革计划，称公众信心下降而美国面临“破坏”](/articles/voa/1013717.md)
-
-7-30 [不只是开幕式，巴黎奥运争议多……](/articles/voa/1013718.md)
 
