--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-12 [美中金牌總數平手 中國寫北京奧運以來最佳績](/articles/dw/1024621.md)
+
 8-11 [菲律宾总统：中国空军的行动“非法且鲁莽”](/articles/dw/1024622.md)
 
 8-11 [在塞尔维亚开采锂矿？数万人抗议](/articles/dw/1024623.md)
@@ -598,6 +600,4 @@
 7-12 [北约迎来75周年：问题多多 何去何从](/articles/dw/1024919.md)
 
 7-12 [三中全会将如何为中国经济“指明方向“？](/articles/dw/1024920.md)
-
-7-12 [不同寻常！小红书传获海外风投公司投资](/articles/dw/1024921.md)
 
