--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-12 [美防长公开宣布向中东派遣潜艇 并要求航母打击群加速前往](/articles/voa/1013416.md)
+
+8-12 [加州民众集会声援方艺融 抗议高智晟被中共强迫失踪七周年](/articles/voa/1013417.md)
+
 8-12 [以色列扩大加沙南部的撤离命令。哈马斯希望协议计划而不是更多谈判](/articles/voa/1013418.md)
 
 8-12 [巴黎为2024年奥运会举行一场群星秀](/articles/voa/1013419.md)
@@ -596,8 +600,4 @@
 7-30 [美报告：美国国防战略“过时”不能应对中俄威胁，亟需“战斗号令”](/articles/voa/1013714.md)
 
 7-30 [“中华台北”表述两头受拒，台湾奥运代表团正式名称再受关注](/articles/voa/1013715.md)
-
-7-30 [巴基斯坦军方：瓜达尔抗议者打死一名军人，打伤16名军人](/articles/voa/1013716.md)
-
-7-30 [拜登公布最高法院改革计划，称公众信心下降而美国面临“破坏”](/articles/voa/1013717.md)
 
