--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-12 [中国债券市场因央行与国债牛市对抗而动荡](/articles/voa/1013415.md)
+
 8-12 [美防长公开宣布向中东派遣潜艇 并要求航母打击群加速前往](/articles/voa/1013416.md)
 
 8-12 [加州民众集会声援方艺融 抗议高智晟被中共强迫失踪七周年](/articles/voa/1013417.md)
@@ -598,6 +600,4 @@
 7-30 [运动员抱怨食品和交通后,巴黎奥运会主办方解决后勤问题](/articles/voa/1013713.md)
 
 7-30 [美报告：美国国防战略“过时”不能应对中俄威胁，亟需“战斗号令”](/articles/voa/1013714.md)
-
-7-30 [“中华台北”表述两头受拒，台湾奥运代表团正式名称再受关注](/articles/voa/1013715.md)
 
