--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-13 [欧佩克削减2024年石油需求增长预测，中国经济不佳是一大主因](/articles/voa/1013401.md)
+
+8-13 [基里巴斯大选本周拉开帷幕，马茂政府亲中政策面临民意检验](/articles/voa/1013402.md)
+
+8-13 [美中奥运金牌“并列第一”，观察:中国煽动反美大打“认知战”](/articles/voa/1013403.md)
+
 8-12 [德法英三国领导人发表声明紧急呼吁加沙停火释放人质](/articles/voa/1013404.md)
 
 8-12 [台湾因驻澳门人员被要求签“一中”承诺书无法赴任而考虑关闭驻澳门办事处](/articles/voa/1013405.md)
@@ -594,10 +600,4 @@
 7-31 [无惧中国威胁，“对华政策跨国议会联盟”年会移师台北，并接纳台湾入会](/articles/voa/1013699.md)
 
 7-30 [回应埃尔多安武装入侵以色列的威胁，以色列外长敦促北约开除土耳其](/articles/voa/1013700.md)
-
-7-30 [基辅邀请王毅访问乌克兰，北京据说对此“感兴趣”](/articles/voa/1013701.md)
-
-7-30 [梅洛尼：希望消除意大利产品进入中国的障碍](/articles/voa/1013702.md)
-
-7-30 [台湾总统赖清德警告中国“威胁”推动国防自主](/articles/voa/1013703.md)
 
