--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-13 [前洛杉矶郡执法人员因虚假查抄一名中国商人并勒索3700万美元而被联邦当局起诉](/articles/voa/1013387.md)
+
 8-13 [美国：日内瓦苏丹谈判将举行，没有苏丹军方参与也行](/articles/voa/1013388.md)
 
 8-13 [前康奈尔大学学生因向犹太学生发布威胁被判监禁21个月](/articles/voa/1013389.md)
@@ -598,6 +600,4 @@
 7-31 [美智库二轨闭门会报告：避免台海危机两岸必须直接沟通](/articles/voa/1013685.md)
 
 7-31 [美议员指责国际奥委会和世界反兴奋剂机构“敲诈勒索”，并针锋相对推出新法案](/articles/voa/1013686.md)
-
-7-31 [联合国：拉法供水设施被毁增加了加沙健康风险](/articles/voa/1013687.md)
 
