--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-13 [生活在中国南海野心阴影下的菲律宾渔民](/articles/nyt/1042484.md)
+
 8-13 [为什么人们担心中美会在南海爆发战争](/articles/nyt/1042485.md)
 
 8-13 [美国高级官员将访华进行经贸谈判](/articles/nyt/1042486.md)
@@ -598,6 +600,4 @@
 5-10 [中国富豪承认提供非法政治捐款，将放弃绿卡离开美国](/articles/nyt/1042782.md)
 
 5-10 [欧洲住房危机蔓延，“黄金签证”走向终结](/articles/nyt/1042783.md)
-
-5-10 [习近平访问布达佩斯，中匈建立“全天候全面战略伙伴关系”](/articles/nyt/1042784.md)
 
