--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-13 [中国如何用边境村庄建起新“长城”](/articles/nyt/1042483.md)
+
 8-13 [生活在中国南海野心阴影下的菲律宾渔民](/articles/nyt/1042484.md)
 
 8-13 [为什么人们担心中美会在南海爆发战争](/articles/nyt/1042485.md)
@@ -598,6 +600,4 @@
 5-13 [习近平结束访欧：收获友情，但恐难彻底打消欧洲对华疑虑](/articles/nyt/1042781.md)
 
 5-10 [中国富豪承认提供非法政治捐款，将放弃绿卡离开美国](/articles/nyt/1042782.md)
-
-5-10 [欧洲住房危机蔓延，“黄金签证”走向终结](/articles/nyt/1042783.md)
 
