--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-13 [乌克兰继续对俄罗斯库尔斯克和别尔哥罗德发动猛攻](/articles/voa/1013381.md)
+
 8-13 [中东紧张加剧之际红海一艘船只疑似遭到胡塞武装三次袭击](/articles/voa/1013382.md)
 
 8-13 [马斯克与特朗普进行了冗长的在线对谈](/articles/voa/1013383.md)
@@ -598,6 +600,4 @@
 7-31 [中国7月份制造业活动连续第三个月萎缩](/articles/voa/1013679.md)
 
 7-31 [以色列称在贝鲁特袭击中杀死真主党高级指挥官](/articles/voa/1013680.md)
-
-7-31 [美副国务卿：中国对俄罗斯的支持也将对印太安全构成长期挑战](/articles/voa/1013681.md)
 
