--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-13 [【网络民议】知乎问答：跳水为什么几乎全世界都玩不过中国？](/articles/cdt/338034.md)
+
 8-13 [正面连接｜从家中偷走一个11岁女孩](/articles/cdt/338042.md)
 
 8-13 [天涯行路｜怪人们越来越“奇怪”？](/articles/cdt/338043.md)
@@ -598,6 +600,4 @@
 7-6 [天涯行路｜呼吁救灾和捐款的新闻下面，人心变了](/articles/cdt/339131.md)
 
 7-6 [梦马笔谈｜“沉车裹头”封堵大堤，怎就成了“创举”？](/articles/cdt/339132.md)
-
-7-6 [每日一语 2024.7.5](/articles/cdt/339133.md)
 
