--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-13 [中国今年第二季度外商直接投资出现负增长](/articles/dw/1024606.md)
+
+8-13 [特朗普、马斯克X平台对谈：马斯克愿为削减政府开支效力](/articles/dw/1024607.md)
+
+8-13 [无人生还  巴西客机居民区坠毁](/articles/dw/1024608.md)
+
 8-13 [巴黎奥运的特别时刻](/articles/dw/1024609.md)
 
 8-13 [戰火一觸即發？美稱伊朗恐本週襲擊以色列](/articles/dw/1024610.md)
@@ -594,10 +600,4 @@
 7-14 [陈紫娟：常玮平虽获释 家人团聚希望仍渺茫](/articles/dw/1024904.md)
 
 7-14 [白俄罗斯与中国渐行渐近 后果会怎样？](/articles/dw/1024905.md)
-
-7-14 [感染牛群的禽流感向潜在大流行迈进？](/articles/dw/1024906.md)
-
-7-14 [德国海上风机中国造   会带来安全隐患吗？](/articles/dw/1024907.md)
-
-7-13 [朝鲜谴责称北约峰会《华盛顿宣言》“非法”](/articles/dw/1024908.md)
 
