--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-22 [台湾总统赖清德会见美国前驻联合国大使妮基·黑利](/articles/voa/1013148.md)
+
+8-22 [各方推动加沙停火协议之际，以军空袭加沙及黎巴嫩南部](/articles/voa/1013149.md)
+
+8-22 [“上四休三”却减薪，中国企业祭不裁员“降本增效”新招？](/articles/voa/1013150.md)
+
 8-22 [中国证实被捕日企高管已被起诉 罪名是间谍罪](/articles/voa/1013151.md)
 
 8-22 [中国抗议美高级官员在纽约会晤康复中的西藏流亡精神领袖达赖喇嘛](/articles/voa/1013152.md)
@@ -594,10 +600,4 @@
 8-10 [无畏性别争议 阿尔及利亚拳击手赫利夫在女子66公斤级决赛夺得奥运金牌](/articles/voa/1013446.md)
 
 8-10 [中东威胁加剧 美国解除对沙特出售攻击性武器的禁令](/articles/voa/1013447.md)
-
-8-10 [美智库访台桌面推演：习近平准备承受经济与地缘政治冲击以求统一台湾](/articles/voa/1013448.md)
-
-8-10 [情报界消息人士：伊朗将很快向俄罗斯运送数百枚弹道导弹](/articles/voa/1013449.md)
-
-8-10 [随着美国大选临近 美韩日安全合作可能面临考验](/articles/voa/1013450.md)
 
