--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-23 [中国扩大台海巡航执法，学者吁台湾警惕“切香肠”式灰色袭扰](/articles/voa/1013145.md)
+
 8-23 [身段柔软的莫迪赴基辅访问 称没有冲突能在战场上解决](/articles/voa/1013146.md)
 
 8-23 [台总统赖清德准备首次以总统身份视察金门前线，主持八二三炮战66周年祭典](/articles/voa/1013147.md)
@@ -598,6 +600,4 @@
 8-10 [朝鲜不寻求外援 金正恩:1.5万洪水灾民将带到首都照顾](/articles/voa/1013443.md)
 
 8-10 [中国火箭于太空中解体 分析人士称逾千颗卫星面临碰撞危险](/articles/voa/1013444.md)
-
-8-10 [以色列袭击加沙 伊朗称将就暗杀事件惩罚以色列](/articles/voa/1013445.md)
 
