--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-23 [泽连斯基访问毗邻库尔斯克的乌克兰边境地区](/articles/voa/1013144.md)
+
 8-23 [中国扩大台海巡航执法，学者吁台湾警惕“切香肠”式灰色袭扰](/articles/voa/1013145.md)
 
 8-23 [身段柔软的莫迪赴基辅访问 称没有冲突能在战场上解决](/articles/voa/1013146.md)
@@ -598,6 +600,4 @@
 8-10 [在马尔代夫驱逐印度军队后 两国寻求重建关系](/articles/voa/1013442.md)
 
 8-10 [朝鲜不寻求外援 金正恩:1.5万洪水灾民将带到首都照顾](/articles/voa/1013443.md)
-
-8-10 [中国火箭于太空中解体 分析人士称逾千颗卫星面临碰撞危险](/articles/voa/1013444.md)
 
