--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-23 [中国新形态手法吸收台湾军人搜集情报，八名现役和退役军官涉共谍案被判刑](/articles/voa/1013141.md)
+
+8-23 [欧盟将“坚决捍卫”面临中国反补贴调查的乳制品行业](/articles/voa/1013142.md)
+
 8-23 [面对大规模抗议，印尼取消批准有争议的选举法修正案](/articles/voa/1013143.md)
 
 8-23 [泽连斯基访问毗邻库尔斯克的乌克兰边境地区](/articles/voa/1013144.md)
@@ -596,8 +600,4 @@
 8-10 [海外台湾人团体联名致函国际奥委会，允许台湾以本名参赛](/articles/voa/1013439.md)
 
 8-10 [专访阿古智子： 从爱中国到不敢去中国的日本学者](/articles/voa/1013440.md)
-
-8-10 [乌军突击部队在俄本土扩大战果，莫斯科下令边境三州实施安全管制](/articles/voa/1013441.md)
-
-8-10 [在马尔代夫驱逐印度军队后 两国寻求重建关系](/articles/voa/1013442.md)
 
