--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-23 [孙韵: 泰缅政局动荡: 中国在中南半岛的难题](/articles/voa/1013140.md)
+
 8-23 [中国新形态手法吸收台湾军人搜集情报，八名现役和退役军官涉共谍案被判刑](/articles/voa/1013141.md)
 
 8-23 [欧盟将“坚决捍卫”面临中国反补贴调查的乳制品行业](/articles/voa/1013142.md)
@@ -598,6 +600,4 @@
 8-11 [菲律宾罕见谴责中国空军战机“危险”操作，中方自辩“专业规范”](/articles/voa/1013438.md)
 
 8-10 [海外台湾人团体联名致函国际奥委会，允许台湾以本名参赛](/articles/voa/1013439.md)
-
-8-10 [专访阿古智子： 从爱中国到不敢去中国的日本学者](/articles/voa/1013440.md)
 
