--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-23 [民主党大会最后一夜：哈里斯接受提名并将其愿景与特朗普的相对比](/articles/voa/1013136.md)
+
 8-23 [尼泊尔解除对TikTok实施的禁令](/articles/voa/1013137.md)
 
 8-23 [加沙停火协议迟迟难产，中东战火有扩大风险 美中均无力扭转？](/articles/voa/1013138.md)
@@ -598,6 +600,4 @@
 8-11 [巴勒斯坦官员说，以色列空袭加沙一所学校打死至少80人](/articles/voa/1013434.md)
 
 8-11 [乌军进入俄罗斯边境地区让普京难堪 它会如何影响战争进程？](/articles/voa/1013435.md)
-
-8-11 [成千上万中国人移居日本 摆脱焦虑寻求安稳？](/articles/voa/1013436.md)
 
