--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-23 [哈里斯接受民主党总统候选人提名 呼吁结束加沙战争和打击暴政](/articles/voa/1013132.md)
+
+8-23 [美国民主党全国代表大会落幕 中国议题占几何？](/articles/voa/1013133.md)
+
 8-23 [莫迪将对乌克兰展开历史性访问并推动结束俄乌战争](/articles/voa/1013134.md)
 
 8-23 [中国和白俄罗斯发表联合公报同意加强贸易与安全合作](/articles/voa/1013135.md)
@@ -596,8 +600,4 @@
 8-11 [一些美国议员敦促对孟加拉国官员实施制裁](/articles/voa/1013430.md)
 
 8-11 [台湾选手林郁婷撇性别争议 夺巴黎奥运拳击羽量级金牌](/articles/voa/1013431.md)
-
-8-11 [2024巴黎奥运会十大精彩时刻：争议、感动与惊喜交织的体坛盛宴](/articles/voa/1013432.md)
-
-8-11 [俄罗斯在乌克兰突击进入中撤离几万人](/articles/voa/1013433.md)
 
