--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-23 [白宫顾问沙利文下周访华 将谈台湾、南海、乌战](/articles/dw/1024507.md)
+
 8-23 [习近平与英国首相斯塔默举行电话通话](/articles/dw/1024508.md)
 
 8-23 [哈里斯：“我不会去讨好像金正恩那样的暴君和独裁者们”](/articles/dw/1024509.md)
@@ -598,6 +600,4 @@
 7-24 [中乌外长会晤：为和谈铺路](/articles/dw/1024805.md)
 
 7-24 [賀錦麗民調微幅領先川普 兩人誰會贏？](/articles/dw/1024806.md)
-
-7-24 [举办奥运会 东道国经济受益几何？](/articles/dw/1024807.md)
 
