--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-23 [莫迪会见泽连斯基，呼吁俄乌尽早对话](/articles/voa/1013123.md)
+
+8-23 [台湾感谢澳大利亚国会通过动议恢复联大2785号决议的原本意涵](/articles/voa/1013124.md)
+
 8-23 [唐元隽、王书君 间谍案连连 中共广泛渗透海外中国民运](/articles/voa/1013125.md)
 
 8-23 [Axios独家：沙利文下周前往北京会晤王毅，为最后一次拜习会做准备](/articles/voa/1013126.md)
@@ -596,8 +600,4 @@
 8-12 [印度的战略飞跃: 亮相轻型坦克“佐拉瓦”，部署中印边界](/articles/voa/1013421.md)
 
 8-12 [英国对来自中国的研究人员严加审查引发广泛质疑](/articles/voa/1013422.md)
-
-8-12 [以色列军方扩大加沙南部汗尤尼斯居民撤离令](/articles/voa/1013423.md)
-
-8-11 [王毅：中国支持伊朗捍卫主权安全和民族尊严](/articles/voa/1013424.md)
 
