--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-24 [美司法部：一名佛州电信和信息技术工作者对串谋充当中国代理人的指控认罪](/articles/voa/1013120.md)
+
 8-24 [英国首相斯塔默与习近平通话，强调双方要“坦诚”对话](/articles/voa/1013121.md)
 
 8-24 [哈里斯成为民主党总统候选人，中国学界民间看好](/articles/voa/1013122.md)
@@ -598,6 +600,4 @@
 8-12 [以色列扩大加沙南部的撤离命令。哈马斯希望协议计划而不是更多谈判](/articles/voa/1013418.md)
 
 8-12 [巴黎为2024年奥运会举行一场群星秀](/articles/voa/1013419.md)
-
-8-12 [俄罗斯称阻止了乌克兰攻入库尔斯克地区](/articles/voa/1013420.md)
 
