--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-24 [【404文库】“如果‘自由’是好的，创造自由就比享受自由更好”（外二篇）](/articles/cdt/337722.md)
+
 8-23 [那些原本是废话的常识｜袁凌过得很糟吗？靠文字吃饭的人另有敬畏](/articles/cdt/337725.md)
 
 8-23 [每日一语 2024.8.22](/articles/cdt/337731.md)
@@ -598,6 +600,4 @@
 7-17 [中国新闻周刊｜“冒牌教授”魏新河行骗记](/articles/cdt/338827.md)
 
 7-17 [大浪淘沙｜“996”是民族复兴的最大动力](/articles/cdt/338829.md)
-
-7-17 [【立此存照】安徽纪检监察｜传播负能量和错误观点行为认定与处理](/articles/cdt/338832.md)
 
