--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-24 [正面连接｜外卖员聊《逆行人生》：这是城市精英的故事，不是我的故事](/articles/cdt/337714.md)
+
+8-24 [情况有点复杂｜2024年，后疫情时代一个吹哨人的遭遇](/articles/cdt/337715.md)
+
+8-24 [倪刃｜专制必然导致腐败](/articles/cdt/337717.md)
+
+8-24 [每日一语 2024.8.23](/articles/cdt/337719.md)
+
 8-24 [【404文库】“如果‘自由’是好的，创造自由就比享受自由更好”（外二篇）](/articles/cdt/337722.md)
 
 8-23 [那些原本是废话的常识｜袁凌过得很糟吗？靠文字吃饭的人另有敬畏](/articles/cdt/337725.md)
@@ -592,12 +600,4 @@
 7-17 [雷叔写故事｜李雪琴的瓜，背后水多深？](/articles/cdt/338810.md)
 
 7-17 [往事与随想｜22天了，杀害胡友平的凶手是谁？](/articles/cdt/338812.md)
-
-7-16 [每日一语 2024.7.16](/articles/cdt/338822.md)
-
-7-17 [学之智｜中国政府部门债务现状](/articles/cdt/338824.md)
-
-7-17 [中国新闻周刊｜“冒牌教授”魏新河行骗记](/articles/cdt/338827.md)
-
-7-17 [大浪淘沙｜“996”是民族复兴的最大动力](/articles/cdt/338829.md)
 
