--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-24 [黑利：孤立主义不健康，支持台湾很重要](/articles/dw/1024504.md)
+
+8-24 [德国索林根市发生持刀袭击案 疑犯仍在逃](/articles/dw/1024505.md)
+
 8-24 [德国索林根市发生持刀袭击案](/articles/dw/1024506.md)
 
 8-23 [白宫顾问沙利文下周访华 将谈台湾、南海、乌战](/articles/dw/1024507.md)
@@ -596,8 +600,4 @@
 7-24 [墙外文摘：习近平用深化改革取代改革](/articles/dw/1024802.md)
 
 7-24 [中乌外长会晤： 库列巴尚未看到俄方和谈的诚意](/articles/dw/1024803.md)
-
-7-24 [马斯克称星链互联网服务已在加沙医院激活](/articles/dw/1024804.md)
-
-7-24 [中乌外长会晤：为和谈铺路](/articles/dw/1024805.md)
 
