--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-24 [人权组织称中国监禁了数百名维吾尔族科学家](/articles/voa/1013109.md)
+
 8-24 [Meta封锁了伊朗黑客的WhatsApp账户 因美国总统候选人等官员受到威胁](/articles/voa/1013110.md)
 
 8-24 [美军在叙利亚击毙了基地组织附属武装分子领导人](/articles/voa/1013111.md)
@@ -598,6 +600,4 @@
 8-12 [奥运夺牌选手却被嘘，专家:中国以政治凌驾体育](/articles/voa/1013407.md)
 
 8-12 [路透：越共总书记苏林刚上任首次外访就奔北京](/articles/voa/1013408.md)
-
-8-12 [乌军越境攻入俄本土近一周后，俄当局呼吁更多居民撤离边境战区](/articles/voa/1013409.md)
 
