--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-24 [朝鲜谴责美国修改核战略指导 并誓言推进其核能力](/articles/voa/1013107.md)
+
+8-24 [菲律宾指控中国对其巡逻机发射照明弹 呼吁停止“挑衅和危险”的行动](/articles/voa/1013108.md)
+
 8-24 [人权组织称中国监禁了数百名维吾尔族科学家](/articles/voa/1013109.md)
 
 8-24 [Meta封锁了伊朗黑客的WhatsApp账户 因美国总统候选人等官员受到威胁](/articles/voa/1013110.md)
@@ -596,8 +600,4 @@
 8-12 [台湾因驻澳门人员被要求签“一中”承诺书无法赴任而考虑关闭驻澳门办事处](/articles/voa/1013405.md)
 
 8-12 [香港首名国安犯唐英杰公开忏悔， “电视认罪”手法延伸到香港](/articles/voa/1013406.md)
-
-8-12 [奥运夺牌选手却被嘘，专家:中国以政治凌驾体育](/articles/voa/1013407.md)
-
-8-12 [路透：越共总书记苏林刚上任首次外访就奔北京](/articles/voa/1013408.md)
 
