--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-24 [德国索林根市持刀袭击案：警方逮捕一名嫌疑人](/articles/dw/1024499.md)
+
 8-24 [菲律宾指责中国对其巡逻机发射照明弹](/articles/dw/1024500.md)
 
 8-24 [朝鲜谴责美国最新核战略计划](/articles/dw/1024501.md)
@@ -598,6 +600,4 @@
 7-25 [拜登強調交棒新世代 川普諷演說「聽不懂」](/articles/dw/1024797.md)
 
 7-24 [法国获2030年冬奥会举办权 需先提供保证书](/articles/dw/1024798.md)
-
-7-24 [科隆/波恩机场：气候抗议者粘在跑道上](/articles/dw/1024799.md)
 
